ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: daniscarpa-lb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.Baladaniscarpa.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: daniscarpa-backend
          servicePort: 5000
      - path: /
        backend:
          serviceName: daniscarpa-frontend
          servicePort: 3000
